package com.project.ldts.model.game.elements;

public interface Health {
    void increaseHealth();
    void decreaseHealth();
}
