package com.project.ldts.model.game.elements;

public class Sand extends Element {

    public Sand(int col, int row){
        super(col,row);
    }
}
