package com.project.ldts.model.game.elements;

public class Wall extends Element {

    public Wall(int col, int row){
        super(col,row);
    }
}
