package com.project.ldts.model.game.elements;

public class Water extends Element {

    public Water(int col, int row){
        super(col, row);
    }

}
